[package]
name = "Inverse-Observation-Induced-Probability-Field-Interference"
version = "0.1.0"
edition = "2021"
authors = ["Funmatu <funmatu@gmail.com>"]
description = "A dual-runtime computation core for WebAssembly and Python, powered by Rust."

[lib]
name = "inverse_observation_induced_probability_field_interference"
crate-type = ["cdylib", "rlib"]

[features]
default = []

wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:js-sys"
]
python = ["dep:pyo3"]

[dependencies]
# --- Core Math & Utils ---
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
rand = "0.8"

# 【修正】WASMビルドでの乱数生成エラーを回避するため、getrandomの"js"機能を有効化
getrandom = { version = "0.2", features = ["js"] }

# --- Graphics / Compute (WGPU) ---
wgpu = "0.20"

# --- Feature: WebAssembly ---
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }

web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Performance",
] }

# --- Feature: Python ---
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# CPU並列計算用
rayon = "1.10"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1